<resources>
    <string name="app_name">Game</string>
    <string name="TicTacToe">      Tic Tac Toe     </string>
    <string name="GuessTheNumber">GuessTheNumber</string>
    <string name="EnterPlayerName">Enter Player Name</string>
    <string name="PlayerOne">Player One</string>
    <string name="PlayerTwo">Player Two</string>
    <string name="StartGame">Start Game</string>
    <string name="Heading">Welcome To TiTacToe</string>
    <string name="grid">MainGrid</string>
    <string name="imageview">imageview</string>
    <string name="imageview1">imageview1</string>
    <string name="imageView2">imageView2</string>
    <string name="imageView3">imageView3</string>
    <string name="imageView4">imageView4</string>
    <string name="imageView5">imageView5</string>
    <string name="imageView6">imageView6</string>
    <string name="imageView7">imageView7</string>
    <string name="imageView8">imageView8</string>
    <string name="imageView9">imageView9</string>
    <string name="hint_question">Guess Any Integer</string>
    <string name="hint">Between 1 to 100</string>
    <string name="submit_button">Submit</string>
    <string name="result_or_help">Result Preview Here.\nEnter guess the Number then click Submit.</string>
    <string name="correct">You Guess The Right Number</string>
    <string name="wrong">Try Again,Wrong Guess</string>
    <string name="submit">SUBMIT</string>

</resources>