<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlayer"
    android:orientation="vertical"
    android:background="#342D7E">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/EnterPlayerName"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:background="@color/dark_blue"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="47dp"
            android:src="@drawable/x"
            android:adjustViewBounds="true"/>

        <EditText
            android:id="@+id/PlayerOneName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/dark_blue"
            android:hint="@string/PlayerOne"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/light_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:background="@color/dark_blue"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/o"
            android:adjustViewBounds="true"/>
        <EditText
            android:id="@+id/PlayerTwoName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/PlayerTwo"
            android:textColorHint="@color/light_white"
            android:textColor="#FFFFFF"
            android:background="@color/dark_blue"/>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/StartGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/StartGame"
        android:textColor="@color/black"
        android:background="@drawable/round_back_blue"/>




</LinearLayout>